--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,17 @@
 @media print {
   @page {
     size: auto; /* Set the page size to letter */
-    margin: 0;    /* Remove default margins */
+    margin: 0 !important;    /* Remove default margins */
+    color-adjust: exact;
+    -webkit-print-color-adjust: exact;
   }
 
   body {
     margin: 0; /* Remove margins from the body */
+  }
+
+  .is-not-first {
+    margin-top: "0px";
   }
 
   .printable-content {
@@ -15,6 +21,9 @@
     justify-content: center;
     align-items: center;
   }
+}
+.is-not-first {
+  margin-top: "15px";
 }
 /* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
